feat: Add GET /v1/category endpoint and added category validation for posts
